DDFileLister: New configuration option, displayNumFilesInHeader. Forgot to include it in the .cfg file in my last commit.

--- a/xtrn/ddfilelister/ddfilelister.cfg
+++ b/xtrn/ddfilelister/ddfilelister.cfg
@@ -35,5 +35,9 @@ displayUserAvatars=true
 ; filename in the list instead
 useFilenameIfNoDescription=true
 
+; Whether or not to display the number of files in the directory in
+; the header at the top of the list
+displayNumFilesInHeader=true
+
 ; The name of the color theme configuration file
 themeFilename=defaultTheme.cfg
