DDFileLister: New color option for the filename when used in the description: filenameInDesc

--- a/xtrn/ddfilelister/defaultTheme.cfg
+++ b/xtrn/ddfilelister/defaultTheme.cfg
@@ -68,3 +68,6 @@ listNumTrad=gh
 fileAreaDescTrad=c
 ; The number of directories/files for 'normal' colors (for moving a file)
 fileAreaNumItemsTrad=bh
+
+; Filename when used in the description
+filenameInDesc=g
