DDFileLister filename behavior for extended descriptions: New configuration option, filenameInExtendedDescription. The setting useFilenameIfNoDescription changed to useFilenameIfShortDescriptionEmpty

--- a/xtrn/ddfilelister/ddfilelister.cfg
+++ b/xtrn/ddfilelister/ddfilelister.cfg
@@ -31,9 +31,19 @@ blankNFilesListedStrIfLoadableModule=true
 ; information for files
 displayUserAvatars=true
 
-; If a file's description is unavailable, whether or not to use the
-; filename in the list instead
-useFilenameIfNoDescription=true
+; For short descriptions (extended descriptions disabled), if a file's
+; description is unavailable, whether or not to use the filename in the
+; list instead
+useFilenameIfShortDescriptionEmpty=true
+
+; How to use the filename in the extended description
+; always: Always use the filename in the description
+; ifDescEmpty: Only if the description is empty (also though,
+;              if the filename is too short to fully be shown
+;              in the menu, the full filename will appear in the
+;              description)
+; never: Never use the filename in the description
+filenameInExtendedDescription=ifDescEmpty
 
 ; Whether or not to display the number of files in the directory in
 ; the header at the top of the list
