--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ include:
       has_gtk: "yes"
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
-smoketest-jsexec-linux:
+"linux-x64 jsexec-smoketest":
   tags: [Linux]
   image: gcc
   stage: test
@@ -105,7 +105,7 @@ smoketest-jsexec-linux:
     - "*.exe.release/jsexec -C -c../../ctrl -r 'exit(0)'"
   dependencies: ["linux-x64 [sbbs]"]
 
-install-linux:
+"linux-x64 install":
   tags: [Linux]
   image: gcc
   stage: test
@@ -143,7 +143,7 @@ install-linux:
       - "src/sbbs3/*/*.exe"
       - "xtrn/*/*.exe"
 
-smoketest-jsexec-win32:
+"windows-x86 jsexec-smoketest":
   tags: [Windows]
   stage: test
   extends: .rules
@@ -153,7 +153,7 @@ smoketest-jsexec-win32:
     - ..\msvc.win32.exe.release\jsexec -c../../../ctrl -C exit(0)"
   dependencies: ["windows-x86 [sbbs]"]
 
-"win32 jsexec-testsuite":
+"windows-x86 jsexec-testsuite":
   tags: [Windows]
   stage: test
   extends: .rules
