Add NO_USER_PROT in comments, enable by default for IMAP[S} services

--- a/ctrl/services.ini
+++ b/ctrl/services.ini
@@ -41,6 +41,8 @@ ListenBacklog=5
 ;	LOOP
 ;	NATIVE
 ;	FULL_ACCEPT
+;	TLS
+;	NO_USER_PROT
 
 ; Network News Transfer Protocol (NNTP)
 [NNTP]
@@ -150,9 +152,11 @@ Command=websocketservice.js
 Port=143
 Command=imapservice.js
 Enabled=false
+Options=NO_USER_PROT
 
 [IMAPS]
 Options=TLS
 Port=993
 Command=imapservice.js
 Enabled=false
+Options=NO_USER_PROT
