Disable ircd by default
The ircd keeps services from auto-recycling upon request while there's an
outbound connection (e.g. to vert).

--- a/ctrl/services.ini
+++ b/ctrl/services.ini
@@ -110,6 +110,7 @@ Command=gopherservice.js
 
 ; Internet Relay Chat (IRC) Daemon (Server)
 [IRC]
+Enabled=false
 Port=6667
 Options=STATIC | LOOP
 Command=ircd.js
