MRC Change List on 3/3/2025:

--- a/xtrn/mrc/mrc-client.example.ini
+++ b/xtrn/mrc/mrc-client.example.ini
@@ -5,10 +5,15 @@ ping_interval = 60
 [startup]
 room = lobby
 motd = true
-banners = true
+commands = 
+splash = true
 
 [aliases]
 
-[client]
-;change this to true if you want show the nick list on connect.
-show_nicks=false
+[theme]
+
+[msg_color]
+
+[show_nicks]
+
+[twit_list]
