We want the install test to start right away, not way for all builds
<@Deuce> If you want the install test to start immediately, you would use needs: []

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,6 +112,7 @@ include:
   extends: .rules
   script:
     - make -f install/install-sbbs.mk NOCAP=1
+  needs: []
 
 "windows-x86 [sbbs]":
   tags: [Windows]
