Mark zip and unzip testable file commands as "Native"
This should be redundant since "zip" and "unzip" should already be in the
native program list, but at some point we should be able to get rid of the
native program list or at least have it default to blank.

--- a/ctrl/file.ini
+++ b/ctrl/file.ini
@@ -74,13 +74,13 @@ supported_archive_formats=zip, z7, tgz
 	cmd=%@unzip -tqq %f
 	working=Testing ZIP Integrity...
 	ars=
-	ex_mode=0
+	ex_mode=0x4000
 [tester:1]
 	extension=ZIP
 	cmd=%@zip -z %f < %zzipmsg.txt
 	working=Adding ZIP Comment...
 	ars=
-	ex_mode=0
+	ex_mode=0x4000
 [protocol:0]
 	key=X
 	name=XMODEM-Original
