--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -154,7 +154,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	target_compile_definitions(xpdev PUBLIC __unix__ __DARWIN__ USE_SNPRINTF)
 	target_link_libraries(xpdev m)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	target_compile_definitions(xpdev PUBLIC POSIX_C_SOURCE=200809L _DEFAULT_SOURCE _BSD_SOURCE SPEED_MACROS_ONLY _GNU_SOURCE _FILE_OFFSET_BITS=64)
+	target_compile_definitions(xpdev PUBLIC _DEFAULT_SOURCE _BSD_SOURCE SPEED_MACROS_ONLY _GNU_SOURCE _FILE_OFFSET_BITS=64)
 	target_link_libraries(xpdev m)
 else()
 	target_link_libraries(xpdev m)
