Add the [Mail] PostTo key (blank)

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -245,6 +245,7 @@
 	;	TLS_POP3		- Listen on the TLS POP3 service port
 	Options = ALLOW_POP3 | USE_SUBMISSION_PORT | TLS_SUBMISSION | TLS_POP3
 	SpamBlockDuration = 0
+	PostTo = 
 
 [FTP]	FTP(S) Server
 	AutoStart = true
