Add the weekly_event section

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -90,6 +90,10 @@ errlevel=2
 	cmd=%!trashman%. %z*.can %kspamblock.cfg
 	settings=0x4001
 
+[weekly_event]
+	cmd=
+	settings=0
+
 [expired]
 	level=0
 	flags1=0
