Document the 'requirements' and 'wantblink' options

--- a/ctrl/fonts.ini
+++ b/ctrl/fonts.ini
@@ -190,6 +190,12 @@ oldenglish=oldeng.f14
 ; characters (text and "graphics") displayed on the remote terminal without
 ; re-sending any of those characters!
 
+; A 'requirements' key may be set to a valid Access Requirement String (ARS)
+; both globally (e.g. before any [sections] are defined, towards the top of
+; this file) and per Font Section.  Users not meeting the specified
+; requirements will not receive the font change(s).  If specified, both the
+; global and per-font requirements must be met for a font to apply to a user.
+
 ; ****************************
 ; Loading and Activating Fonts
 ; ****************************
@@ -223,6 +229,12 @@ oldenglish=oldeng.f14
 ; fonts relevant to a particular use of the BBS (e.g. door game) and
 ; <char> is the character height, in pixels, which corresponds with the user's
 ; terminal screen length (see above descriptions, but 16 is most common).
+
+; Set 'wantblink=true' in a font section if blinking/flashing text is desired.
+; This will result in the blink attribute remaining enabled on the terminal
+; for the configured blink/highblink styles (if any) in a font section.
+; Without 'wantblink' enabled, the blink attribute will be disabled on the
+; terminal when displaying text using the blink or highblink style.
 
 ; Default Sections
 ; ----------------
