Digital Distortion area choosers: Default the name collapsing feature to false in the .cfg files

--- a/xtrn/DDAreaChoosers/DDFileAreaChooser.cfg
+++ b/xtrn/DDAreaChoosers/DDFileAreaChooser.cfg
@@ -5,14 +5,13 @@ useLightbarInterface=true
 ;areaChooserHdrMaxLines=6
 areaChooserHdrFilenameBase=DDLogoAreaChgHeader
 areaChooserHdrMaxLines=12
-; Whether or not to enable directory collapsing.  For
-; example, for directories in a library starting with
+; Whether or not to enable name collapsing.  For
+; example, for libraries/directories starting with
 ; common text and a separator (specified below), the
 ; common text will be the only one displayed, and when
 ; the user selects it, a 3rd tier with the directories
 ; after the separator will be shown
-useDirCollapsing=true
-;useDirCollapsing=false
+useDirCollapsing=false
 ; The separator to use for directory collapsing
 dirCollapseSeparator=:
 
