--- a/xtrn/DDAreaChoosers/DDMsgAreaChooser.cfg
+++ b/xtrn/DDAreaChoosers/DDMsgAreaChooser.cfg
@@ -9,14 +9,13 @@ showImportDates=false
 ;areaChooserHdrMaxLines=6
 areaChooserHdrFilenameBase=DDLogoAreaChgHeader
 areaChooserHdrMaxLines=12
-; Whether or not to enable sub-board collapsing.  For
-; example, for sub-boards in a group starting with
+; Whether or not to enable name collapsing.  For
+; example, for groups or sub-boards in a group starting with
 ; common text and a separator (specified below), the
 ; common text will be the only one displayed, and when
 ; the user selects it, a 3rd tier with the sub-boards
 ; after the separator will be shown
-useSubCollapsing=true
-;useSubCollapsing=false
+useSubCollapsing=false
 ; The separator to use for sub-board collapsing
 subCollapseSeparator=:
 
