Start of RIP abstraction.
Unfortunately, the main reason to do this (tracking text window size)
is actually impossible because the client will change it locally in
response to mouse clicks without notifying us.

About the only useful thing this can do is reset the line counter
on RIP stuff, which is questionable.

--- a/src/sbbs3/sbbs.vcxproj
+++ b/src/sbbs3/sbbs.vcxproj
@@ -653,6 +653,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="rip_parser.cpp" />
     <ClCompile Include="sauce.c" />
     <ClCompile Include="scandirs.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
