--- a/xtrn/DDMsgReader/DDMsgReader.cfg
+++ b/xtrn/DDMsgReader/DDMsgReader.cfg
@@ -108,10 +108,10 @@ subBoardChangeSorting=None
 ; as they like. Valid values are true or false.
 indexedModeNewscanOnlyShowSubsWithNewMsgs=false
 
-; For messages with upvotes/downvotes, when showing vote tally info (a sysop function),
-; whether or not to show whose votes are upvotes and whose are downvotes. If false,
+; For poll messages or messages with upvotes/downvotes, when showing vote tally info
+; (a sysop function), whether or not to show each users' responses. If false,
 ; it will just show the names of who voted on the message (and when).
-showWhoUpvotedAndDownvotedInTallyInfo=false
+showUserResponsesInTallyInfo=false
 
 ; The theme file name (for colors, strings, etc.)
 themeFilename=DefaultTheme.cfg
