Updated default SlyEdit settings to enable retaining Ctrl-A codes in quotes

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -9,7 +9,7 @@
 [editor:SLYEICE]
 	name=SlyEdit (ICE Style)
 	cmd=?slyedit %f ICE
-	settings=0xc01c00
+	settings=0x10e01c00
 	ars=ANSI AND COLS 80
 	type=0
 	soft_cr=1
@@ -17,7 +17,7 @@
 [editor:SLYEDCT]
 	name=SlyEdit (DCT Style)
 	cmd=?slyedit %f DCT
-	settings=0xc01c00
+	settings=0x10e01c00
 	ars=ANSI AND COLS 80
 	type=0
 	soft_cr=1
