DDMsgReader (Digital Distortion Message Reader) now uses DDMsgAreaChooser for choosing a message area. Message area sorting as configured by the user in DDMsgReader. This should add consistency and simplify development, since DDMsgReader no longer internally duplicates the message area chooser code.

--- a/xtrn/DDMsgReader/DDMsgReader.example.cfg
+++ b/xtrn/DDMsgReader/DDMsgReader.example.cfg
@@ -31,10 +31,6 @@ pauseAfterNewMsgScan=true
 ; last message instead of prompting to go to the next sub-board.  This is
 ; like the stock Synchronet behavior.
 readingPostOnSubBoardInsteadOfGoToNext=false
-; The filename (without the extension) and maximum number of lines to use for
-; the header file to display above the message areas in the message chooser
-areaChooserHdrFilenameBase=areaChgHeader
-areaChooserHdrMaxLines=6
 
 ; Whether or not to display user avatars in the message header
 displayAvatars=true
@@ -112,6 +108,13 @@ indexedModeNewscanOnlyShowSubsWithNewMsgs=false
 ; (a sysop function), whether or not to show each users' responses. If false,
 ; it will just show the names of who voted on the message (and when).
 showUserResponsesInTallyInfo=false
+
+; To allow the user to change to another message area (sub-board),
+; DDMsgAreaChooser.js is used. DDMsgAreaChooser.js is normally in
+; sbbs/xtrn/DDAreaChoosers, but if you have it in a different directory,
+; specify its full path & filename with the DDMsgAreaChooser setting
+; below.
+DDMsgAreaChooser=
 
 ; The theme file name (for colors, strings, etc.)
 themeFilename=DefaultTheme.cfg
