Use seconds_to_str() to format [HH:]MM:SS time output in sexyz
I obverved sexyz logging some crazy time progress/estimates when transferring
very large files, e.g.
KByte: 1224127/36872903  1024/CRC-32  Time: 268:43/7825:33  77746 cps  3%

seconds_to_str() automatically does the hour calculating/formatting and trims
leading 0's and colons, so use that function from date_str.c

Also add the GNUC magic for lprintf() format checking while compiling w/GCC

--- a/src/sbbs3/sexyz.vcxproj
+++ b/src/sbbs3/sexyz.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="..\hash\crc16.c" />
     <ClCompile Include="..\hash\crc32.c" />
+    <ClCompile Include="date_str.c" />
     <ClCompile Include="nopen.c">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
