Update Zone 42 details, per Dumas Walker (CAPCITY2)
"Dallas has not been heard from for quite a while and was refering potential
new connections to me before he disappeared."

--- a/exec/init-fidonet.ini
+++ b/exec/init-fidonet.ini
@@ -121,10 +121,10 @@ areatag_prefix = CN_
 [zone:42]
 name = SFNet
 desc = Science Fiction
-pack = http://furmenservices.net/sfnet.zip
-coord = Dallas Vinson
-addr = 42:1/1
-host = furmenservices.net
+pack = http://wiki.capitolcityonline.net/sfnet.zip
+coord = Mike Powell
+addr = 42:1/100
+host = capitolcityonline.net
 echolist = sfnet.na
 areatag_prefix = SF_
 
