Update libffi to v3.5.2
Should fix recent macOS build issue... so re-enable it.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,14 +77,14 @@ include:
       build_flags: 'AR=/home/admin/mingw-w64/bin/x86_64-w64-mingw32-ar AS=/home/admin/mingw-w64/bin/x86_64-w64-mingw32-as CC="ccache /home/admin/mingw-w64/bin/x86_64-w64-mingw32-gcc" CXX="ccache /home/admin/mingw-w64/bin/x86_64-w64-mingw32-g++" RANLIB=/home/admin/mingw-w64/bin/x86_64-w64-mingw32-ranlib WINDRES=/home/admin/mingw-w64/bin/x86_64-w64-mingw32-windres RELEASE=1'
       no_javascript: 'yes'
       has_curses: 'no'
-#  - local: '.gitlab-ci-unix.yml'
-#    inputs:
-#      os: 'darwin-aarch64'
-#      platform: 'aarch64'
-#      tagname: 'macOS-aarch64'
-#      gnu_make: 'make'
-#      has_gtk: "yes"
-#      build_flags: 'RELEASE=1'
+  - local: '.gitlab-ci-unix.yml'
+    inputs:
+      os: 'darwin-aarch64'
+      platform: 'aarch64'
+      tagname: 'macOS-aarch64'
+      gnu_make: 'make'
+      has_gtk: "yes"
+      build_flags: 'RELEASE=1'
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'darwin-x86'
