--- a/xtrn/groupie_news_reader/groupie.example.ini
+++ b/xtrn/groupie_news_reader/groupie.example.ini
@@ -1,5 +1,7 @@
 ; Whether or not to use a lightbar interface if the user's terminal is capable
 use_lightbar_interface=true
+; Whether or not to allow users to change their NNTP server settings
+users_can_change_their_nttp_settings=false
 ; The receive buffer size (in bytes) and timeout (in seconds) for the NNTP client
 receive_bufer_size_bytes=1024
 receive_timeout_seconds=30
@@ -7,6 +9,8 @@ receive_timeout_seconds=30
 hostname=127.0.0.1
 ;hostname=newsfeed.endofthelinebbs.com
 host_port=119
+; Default password for users
+default_server_password=
 ; Whether or not to prepend the subject for forwarded messages with "Fwd: "
 prepend_foward_msg_subject=true
 ; Default maximum number of messages to retrieve from a newsgroup
