Fixup the Linux install test to not reclone (!) the repo
... as discovered and reported by Deuce (thanks).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,7 +111,9 @@ include:
   stage: test
   extends: .rules
   script:
-    - make -f install/install-sbbs.mk NOCAP=1
+    - mkdir sbbs
+    - cd sbbs
+    - make -f ../install/install-sbbs.mk NOCAP=1 REPODIR=..
   needs: []
 
 "windows-x86 [sbbs]":
