--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,7 +113,7 @@ include:
   script:
     - mkdir sbbs
     - cd sbbs
-    - make -f ../install/install-sbbs.mk NOCAP=1 REPODIR=..
+    - make -f ../install/install-sbbs.mk NOCAP=1 REPODIR=$(realpath ..)
   needs: []
 
 "windows-x86 [sbbs]":
