MSVC hates standards
The MSVC headers will error out if you #include stdatomic.h (which
is shipped as part of the MSVC C libraries) if __STDC_NO_ATOMICS__
is defined (which MSVC unconditionally defines in at least C17 mode).

So, for Microsoft C compilers, undef this macro before including
stdatomic.h

Now we can re-enable the build.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -189,17 +189,17 @@ include:
     paths:
       - "src/vdmodem/Release/*.exe"
 
-#"windows-x86 [syncterm-msvc]":
-#  tags: [Windows]
-#  stage: build
-#  extends: .rules
-#  script:
-#    - cd src/syncterm
-#    - .\release.bat
-#  artifacts:
-#    name: syncterm-msvc
-#    paths:
-#      - "src/syncterm/Release/*.exe"
+"windows-x86 [syncterm-msvc]":
+  tags: [Windows]
+  stage: build
+  extends: .rules
+  script:
+    - cd src/syncterm
+    - .\release.bat
+  artifacts:
+    name: syncterm-msvc
+    paths:
+      - "src/syncterm/Release/*.exe"
 
 "freebsd-amd64 [sbbs-noskeeters]":
   extends:
