Actually add the DEPS dependency to XPDev libs

--- a/src/xpdev/GNUmakefile
+++ b/src/xpdev/GNUmakefile
@@ -43,7 +43,7 @@ $(XPTIME): $(OBJODIR)/xptime.o $(XPDEV_LIB_BUILD)
 	@echo Linking $@
 	$(QUIET)$(CC) -o $@ $(LDFLAGS) $^ $(XPDEV_LIB_BUILD) -lm
 
-$(XPDEV_LIB_BUILD): $(OBJS) | $(OBJODIR)
+$(XPDEV_LIB_BUILD): $(DEPS) $(OBJS) | $(OBJODIR)
 	@echo Creating $@
 ifdef FAT
 	$(QUIET)$(DELETE) $@
@@ -51,11 +51,11 @@ endif
 	$(QUIET)$(AR) rc $@ $(OBJS)
 	$(QUIET)$(RANLIB) $@
 
-$(XPDEV_SHLIB_BUILD): $(OBJS) | $(OBJODIR)
+$(XPDEV_SHLIB_BUILD): $(DEPS) $(OBJS) | $(OBJODIR)
 	@echo Creating $@
 	$(QUIET)$(MKSHLIB) $(LDFLAGS) $(OBJS) $(SHLIBOPTS) -o $@
 
-$(XPDEV-MT_LIB_BUILD): $(MTOBJS) | $(MTOBJODIR)
+$(XPDEV-MT_LIB_BUILD): $(DEPS) $(MTOBJS) | $(MTOBJODIR)
 	@echo Creating $@
 ifdef FAT
 	$(QUIET)$(DELETE) $@
@@ -63,7 +63,7 @@ endif
 	$(QUIET)$(AR) rc $@ $(MTOBJS)
 	$(QUIET)$(RANLIB) $@
 
-$(XPDEV-MT_SHLIB_BUILD): $(MTOBJS) | $(MTOBJODIR)
+$(XPDEV-MT_SHLIB_BUILD): $(DEPS) $(MTOBJS) | $(MTOBJODIR)
 	@echo Creating $@
 	$(QUIET)$(MKSHLIB) $(LDFLAGS) $(MTOBJS) $(SHLIBOPTS) -o $@
 
